# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  Cell0Ds.txt  README.md  main.cpp  main_test.cpp
ExportParaview/: CMakeLists.txt
Platonic_solids/: cube.txt  dodecahedron.txt  icosahedron.txt  octahedron.txt  tetrahedron.txt
raw_polyhedron/icosahedron/: Cell0Ds.txt
raw_polyhedron/octahedron/: Cell0Ds.txt  Cell1Ds.txt  Cell2Ds.txt  Cell3Ds.txt
raw_polyhedron/tetrahedron/: Cell0Ds.txt  Cell1Ds.txt  Cell2Ds.txt  Cell3Ds.txt
src/: CMakeLists.txt  Polyhedron.hpp  Utils.cpp  Utils.hpp  funzioni_di_prova.cpp
src_test/: CMakeLists.txt  test_funzioni_di_prova.cpp  test_funzioni_di_prova.hpp  test_polyhedron.hpp
